--- a/jukebox.html
+++ b/jukebox.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Jukeboxxxxx</title>
+
 	<link rel="stylesheet" type="text/css" href="jukebox.css">
 </head>
 <body>
@@ -10,9 +11,11 @@
 	<div id="timer"></div>
 
 	<div id="jukebox">
-		<button id="play"> <img src="images/play.png" height="20px" width="20px"></button>
+		<button id="play"> <img src="images/play2.jpg" height="20px" width="20px"></button>
 		<button id="pause"><img src="images/pause.png" height="20px" width="20px"></button>
 		<button id="skip"><img src="images/skip.png" height="20px" witdth="20px"></button>
+		<button id="stop"><img src="images/stop.jpeg" height="20px" width="20px"></button>
+		<button id="random"> Shuffle </button>
 	</div>	
 
 <!-- 
